docs: update README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,3 +110,6 @@ services:
       args:
         - NEXT_PUBLIC_API_URL=http://localhost/api
     restart: always
+    depends_on:
+      backend:
+        condition: service_healthy
